--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "kinderfestival",
   "version": "0.0.0",
+  "engines":{
+    "node": "8.12.0"
+  },
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
